--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -48,8 +48,9 @@
             }
 
             &__btn {
-                font-family: 'Roboto Slab';
-                font-style: normal;
+                display: flex;
+                align-items: center;
+                justify-content: center;
                 font-weight: 400;
                 font-size: 16px;
                 line-height: 21px;
