--- a/src/Components/Order/Order.scss
+++ b/src/Components/Order/Order.scss
@@ -1,20 +1,22 @@
 @import '../../Assets/Sass/Veriables.scss';
 
-.order{
-    .container{
+.order {
+    .container {
         display: flex;
-        align-items: center;
-        justify-content: space-between;
+        justify-content: center;
         padding: 80px 0;
-        &__left{
+
+        &__left {
             width: 560px;
             height: 574px;
+            margin-right: 30px;
             border-radius: 2rem;
             background-color: $red;
             background-image: url('../../Assets/Img/order-bi.png');
             background-repeat: no-repeat;
             background-position: center;
-            &__form{
+
+            &__form {
                 padding: 30px;
                 height: 100%;
                 display: flex;
@@ -22,7 +24,8 @@
                 text-align: center;
                 justify-content: space-between;
                 flex-direction: column;
-                &__title{
+
+                &__title {
                     color: $white;
                     font-family: 'Roboto Slab';
                     font-style: normal;
@@ -30,7 +33,8 @@
                     font-size: 46px;
                     line-height: 65px;
                 }
-                &__text{
+
+                &__text {
                     color: $white;
                     font-family: 'Roboto Slab';
                     font-style: normal;
@@ -38,7 +42,8 @@
                     font-size: 1.5rem;
                     line-height: 27px;
                 }
-                &__inp{
+
+                &__inp {
                     width: 405px;
                     height: 68px;
                     color: $white;
@@ -47,7 +52,8 @@
                     border: transparent;
                     padding: 0 2rem;
                 }
-                &__btn{
+
+                &__btn {
                     width: 405px;
                     height: 68px;
                     color: $white;
@@ -59,6 +65,98 @@
                     border: transparent;
                 }
             }
+        }
+
+        &__right {
+            margin-top: -70px;
+            margin-right: -200px;
+            display: flex;
+            align-items: center;
+            box-sizing: border-box;
+            &__list {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                flex-direction: column;
+                &__sale {
+                    width: 183px;
+                    padding: 10px 20px;
+                    color: $white;
+                    font-family: 'Roboto Slab';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 2rem;
+                    line-height: 27px;
+                    background: linear-gradient(90deg, #02C623 0%, #167526 79.68%);
+                    box-shadow: 0px -11.6464px 17.4696px rgba(0, 0, 0, 0.2);
+                    transform: matrix(1, 0.1, 0.01, 1, 0, 0);
+                }
+
+                &__def {
+                    padding: 25px 78px;
+                    color: red;
+                    font-family: 'Roboto Slab';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 5rem;
+                    line-height: 27px;
+                    background: #FFFFFF;
+                    box-shadow: 0px 0px 34.9392px rgba(0, 0, 0, 0.5);
+                    transform: matrix(1, 0.1, 0.01, 1, 0, 0);
+                }
+                &__dis{
+                    padding: 28px 141px;
+                    color: $white;
+                    font-family: 'Roboto Slab';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 5rem;
+                    line-height: 27px;
+                    background: linear-gradient(269.32deg, #167526 -0.1%, #00BC20 99.82%);
+                    box-shadow: 0px 0px 34.9392px rgba(0, 0, 0, 0.5);
+                    transform: matrix(1, 0.1, 0.01, 1, 0, 0);
+                }
+                &__ben{
+                    color: $green;
+                    font-family: 'Roboto Slab';
+                    font-style: normal;
+                    font-weight: 500;
+                    font-size: 1.4rem;
+                    line-height: 27px;
+                    display: flex;
+                    padding: 15px 15px;
+                    background: #FFFFFF;
+                    transform: matrix(1, 0.1, 0.01, 1, 0, 0);
+                    p{
+                        margin-bottom: 0;
+                        margin-left: 10px;
+                        color: red;
+                        font-family: 'Roboto Slab';
+                        font-style: normal;
+                        font-weight: 500;
+                        font-size: 3rem;
+                        line-height: 27px;
+                    }
+                }
+            }
+            &__img{
+                width: 400px;
+                object-fit: cover;
+                position: relative;
+                right: 150px;
+                top: 120px;
+            }
+            // @keyframes orderRight {
+            //     0%{
+            //         transform: rotate(-10deg);
+            //     }
+            //     50%{
+            //         transform: rotate(5deg);
+            //     }
+            //     100%{
+            //         transform: rotate(-10deg);
+            //     }
+            // }
         }
     }
 }
