--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -5,6 +5,7 @@
     align-items: center;
     height: 165px;
     position: fixed;
+    z-index: 999;
     background-color: transparent;
     width: 100%;
 
