--- a/src/App.scss
+++ b/src/App.scss
@@ -38,8 +38,8 @@ html {
 
 ::-webkit-scrollbar-thumb {
   background-color: $white;
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
 }
 
 input {
