--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -21,6 +21,7 @@
             width: 780px;
 
             &__list {
+                margin-left: 35px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
