--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,103 +1,98 @@
 @import '../../Assets/Sass/Veriables.scss';
 
-.footer {
-    margin-top: 150px;
-    padding-top: 100px;
-    background-image: url('../../Assets/Img/footer-bi.png');
+.footer{
+    margin-top: 100px;
+    background-image: url(../../Assets/Img/Footer.png);
+    background-size: cover;
+    height:716px;
     background-repeat: no-repeat;
-    background-position: center;
-    height: 612px;
     display: flex;
-    align-items: center;
+    .input{
+        margin-top: -200px;
+        margin-left: 1200px;
+    }
 
-    .container {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        &__list1 {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            flex-direction: column;
-            width: 293px;
-            height: 286px;
-            text-align: center;
-
-            &__text {
-                color: $white;
-                font-family: 'Lato';
-                font-style: normal;
-                font-weight: 550;
-                font-size: 1.2rem;
-                line-height: 1.5rem;
-            }
-
-            &__icon {
-                width: 100%;
-                display: flex;
-                justify-content: center;
-
-                a {
-                    width: 80%;
-                    display: flex;
-                    align-items: center;
-                    justify-content: space-between;
-
-                    img {
-                        width: 19px;
-                        height: 19px;
-                    }
-                }
-            }
+    .link{
+        margin: 0 auto;
+        flex-wrap: wrap;
+        margin-top: 350px;
+        margin-left: 570px;
+        a{
+            color: #fff;
+            font-family: 'Roboto Slab';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 20px;
+            line-height: 50px;
         }
-
-        &__list2 {
-            display: flex;
-            justify-content: space-between;
-            flex-direction: column;
-            width: 293px;
-            height: 156px;
-            &__item{
-                a{
-                    color: $white;
-                }
-            }
+    }
+    .logo{
+        position: relative;
+        .a{
+            margin-top:300px;
+            margin-left: -150px;
+            position: absolute;
         }
-        &__form{
+        h1{
+            width: 230px;
+            height: 42px;
+            color: #fff;
+            font-family: 'Lato';
+            font-weight: 500;
+            font-style: normal;
+            font-size: 14px;
+            line-height: 21px;
+            margin-left: -150px;
+            margin-top:400px;
+            position: absolute;
+        }
+        div{
+            width: 230px;
             display: flex;
-            align-items: center;
-            text-align: center;
             justify-content: space-between;
-            flex-direction: column;
-            width: 313px;
-            height: 286px;
-            &__text{
-                font-family: 'Roboto Slab';
-                font-style: normal;
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 21px;
-                color: $white;
-            }
-            &__inp{
-                width: 100%;
-                height: 52px;
-                background: #89363D;
-                border-radius: 10px;
-                border: transparent;
-                padding: 0 1rem;
-            }
-            &__btn{
-                width: 100%;
-                height: 52px;
-                background: #B04C08;
-                box-shadow: -1px -1px 1px rgba(0, 0, 0, 0.09);
-                border-radius: 5px;
-                border: transparent;
-                color: $white;
-                font-size: 1.3rem;
+            position: absolute;
+            margin-top:530px;
+            margin-left: -150px;
+            a{
             }
         }
     }
+}
+.inpots{
+    margin-top: 29px;
+    width: 317px;
+    height: 52px;
+    color: $white;
+    background: #89363D;
+    border-radius: 5px;
+    border: transparent;
+    padding: 0 2rem;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.foot__btn{
+    margin-top: 34px;
+    width: 312px;
+    height: 52px;
+    color: $white;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 21px;
+    border-radius: 5px;
+    background-color: #B04C08;
+    border: transparent;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+}
+.mine{
+    color: #fff;
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 21px;
 }
