--- a/src/Components/Intro/Intro.scss
+++ b/src/Components/Intro/Intro.scss
@@ -2,12 +2,14 @@
 
 .intro {
     background-image: url('../../Assets/Img/intro.png');
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
     margin-top: -20px;
     padding-top: 245px;
     height: 100vh;
-
+    width: 100%;
+    margin-left: -20px;
     .container {
         display: flex;
         align-items: center;
@@ -49,6 +51,7 @@
         }
         &__right{
             img{
+                place-content: 50px;
                 width: 770px;
                 height: 480px;
             }
